Horizontal scroll bug (#38)
* Remove widths from body and html elements

* Bump version to 1.0.0-alpha.8

* Remove min-height from html and body

--- a/src/elements/main-root/_html.scss
+++ b/src/elements/main-root/_html.scss
@@ -3,8 +3,4 @@
 html {
   background-color: color-greyscale.$white;
   font-size: 62.5%;
-  max-width: 100vw;
-  min-height: 100vh;
-  min-width: 100vw;
-  width: 100vw;
 }
